<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    android:orientation="vertical"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MainActivityInfo"
        android:background="@drawable/buttons"
        android:padding="10dp"
        android:textAlignment="center"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/MainPageFirstInput"
        android:textAlignment="center"
        android:background="@color/editTextBackgroundColor"
        android:padding="10dp"
        android:id="@+id/username"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/MainPageSecondInput"
        android:background="@color/editTextBackgroundColor"
        android:textAlignment="center"
        android:padding="10dp"
        android:inputType="textPassword"
        android:id="@+id/password"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LoginButtonText"
            android:background="@drawable/buttons"
            android:id="@+id/login_button"/>
        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SingupButtonText"
            android:background="@drawable/buttons"
            android:id="@+id/singup_button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copy"
            android:textAlignment="viewEnd"
            android:layout_gravity="bottom"/>
    </LinearLayout>
</LinearLayout>